--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -230,28 +230,23 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>100</number>
+       <number>90</number>
       </attribute>
       <attribute name="horizontalHeaderHighlightSections">
        <bool>true</bool>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>100</number>
+       <number>90</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
-      <column>
-       <property name="text">
-        <string>Callsing</string>
-       </property>
-      </column>
       <column>
        <property name="text">
         <string>VID</string>
@@ -259,7 +254,12 @@
       </column>
       <column>
        <property name="text">
-        <string>Name</string>
+        <string>Callsing</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Realname</string>
        </property>
       </column>
       <column>
@@ -269,7 +269,7 @@
       </column>
       <column>
        <property name="text">
-        <string>Info</string>
+        <string/>
        </property>
       </column>
      </widget>
@@ -335,10 +335,13 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>25</number>
+       <number>70</number>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>25</number>
+       <number>70</number>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
        <number>20</number>
@@ -346,6 +349,31 @@
       <attribute name="verticalHeaderMinimumSectionSize">
        <number>20</number>
       </attribute>
+      <column>
+       <property name="text">
+        <string>VID</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Realname</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Callsing</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Rating</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Country</string>
+       </property>
+      </column>
      </widget>
      <widget class="QLabel" name="SearchForLabel">
       <property name="geometry">
@@ -452,7 +480,7 @@
      <widget class="QLabel" name="MetarLabel">
       <property name="geometry">
        <rect>
-        <x>464</x>
+        <x>469</x>
         <y>242</y>
         <width>51</width>
         <height>16</height>
@@ -485,12 +513,12 @@
       </property>
       <item>
        <property name="text">
-        <string>CallSign</string>
+        <string>VID</string>
        </property>
       </item>
       <item>
        <property name="text">
-        <string>VID</string>
+        <string>CallSign</string>
        </property>
       </item>
       <item>
@@ -515,7 +543,7 @@
      <widget class="QLineEdit" name="METAREdit">
       <property name="geometry">
        <rect>
-        <x>516</x>
+        <x>521</x>
         <y>238</y>
         <width>61</width>
         <height>22</height>
@@ -523,6 +551,38 @@
       </property>
       <property name="cursor">
        <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="searchpushButton">
+      <property name="geometry">
+       <rect>
+        <x>290</x>
+        <y>238</y>
+        <width>91</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="text">
+       <string>Find</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="METARpushButton">
+      <property name="geometry">
+       <rect>
+        <x>585</x>
+        <y>238</y>
+        <width>91</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="text">
+       <string>Find</string>
       </property>
      </widget>
     </widget>
