--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -208,6 +208,9 @@
       <property name="showDropIndicator" stdset="0">
        <bool>false</bool>
       </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
@@ -269,7 +272,7 @@
       </column>
       <column>
        <property name="text">
-        <string/>
+        <string>On-Line</string>
        </property>
       </column>
      </widget>
@@ -335,10 +338,10 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>70</number>
+       <number>60</number>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>70</number>
+       <number>60</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
@@ -356,22 +359,17 @@
       </column>
       <column>
        <property name="text">
-        <string>Realname</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
         <string>Callsing</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Rating</string>
+        <string>Realname</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Country</string>
+        <string>Rating</string>
        </property>
       </column>
      </widget>
@@ -481,7 +479,7 @@
       <property name="geometry">
        <rect>
         <x>469</x>
-        <y>250</y>
+        <y>251</y>
         <width>51</width>
         <height>16</height>
        </rect>
@@ -531,7 +529,7 @@
       <property name="geometry">
        <rect>
         <x>175</x>
-        <y>246</y>
+        <y>247</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -544,7 +542,7 @@
       <property name="geometry">
        <rect>
         <x>521</x>
-        <y>247</y>
+        <y>248</y>
         <width>61</width>
         <height>22</height>
        </rect>
