--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -56,6 +56,9 @@
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
@@ -64,6 +67,9 @@
       <string>Main</string>
      </attribute>
      <widget class="QTableWidget" name="IVAOStatustableWidget">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>9</x>
@@ -94,7 +100,7 @@
        <enum>QAbstractItemView::NoSelection</enum>
       </property>
       <property name="textElideMode">
-       <enum>Qt::ElideMiddle</enum>
+       <enum>Qt::ElideNone</enum>
       </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
@@ -310,6 +316,9 @@
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="accessibleName">
+       <string/>
+      </property>
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
@@ -326,7 +335,13 @@
        <bool>true</bool>
       </property>
       <property name="selectionMode">
-       <enum>QAbstractItemView::NoSelection</enum>
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideNone</enum>
       </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
@@ -1350,8 +1365,38 @@
      <string>Ready</string>
     </property>
    </widget>
+   <widget class="QLabel" name="logo_ivao">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>0</y>
+      <width>71</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::PlainText</enum>
+    </property>
+    <property name="pixmap">
+     <pixmap>../airlines/ivao.jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::NoTextInteraction</set>
+    </property>
+   </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../airlines/ivao.jpg"/>
+ </resources>
  <connections/>
 </ui>
