--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -582,7 +582,7 @@
        <string>Find</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="METARpushButton">
+     <widget class="QPushButton" name="METARFindButton">
       <property name="geometry">
        <rect>
         <x>585</x>
@@ -596,6 +596,25 @@
       </property>
       <property name="text">
        <string>Find</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="METARHelpButton">
+      <property name="geometry">
+       <rect>
+        <x>678</x>
+        <y>247</y>
+        <width>20</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="text">
+       <string>?</string>
       </property>
      </widget>
     </widget>
@@ -1119,7 +1138,7 @@
      <attribute name="title">
       <string>Database</string>
      </attribute>
-     <widget class="QTableView" name="tableView">
+     <widget class="QTableWidget" name="dbTableWidget_1">
       <property name="geometry">
        <rect>
         <x>6</x>
@@ -1131,6 +1150,9 @@
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -1140,14 +1162,41 @@
       <property name="dragDropOverwriteMode">
        <bool>false</bool>
       </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideMiddle</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>50</number>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>50</number>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>15</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>15</number>
+      </attribute>
      </widget>
-     <widget class="QTableView" name="tableView_2">
+     <widget class="QTableWidget" name="dbTableWidget_2">
       <property name="geometry">
        <rect>
         <x>500</x>
@@ -1159,6 +1208,9 @@
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -1168,12 +1220,39 @@
       <property name="dragDropOverwriteMode">
        <bool>false</bool>
       </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
       </property>
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideMiddle</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>50</number>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>50</number>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>15</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>15</number>
+      </attribute>
      </widget>
     </widget>
     <widget class="QWidget" name="actual_user">
@@ -1403,6 +1482,17 @@
     </property>
    </widget>
   </widget>
+  <action name="actionAdd_Friend">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Add Friend</string>
+   </property>
+   <property name="toolTip">
+    <string>Add Friend</string>
+   </property>
+  </action>
  </widget>
  <resources>
   <include location="../airlines/ivao.jpg"/>
