--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -72,7 +72,7 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>9</x>
+        <x>5</x>
         <y>22</y>
         <width>451</width>
         <height>211</height>
@@ -174,7 +174,7 @@
      <widget class="QLabel" name="IVAOStatusLabel">
       <property name="geometry">
        <rect>
-        <x>11</x>
+        <x>7</x>
         <y>5</y>
         <width>91</width>
         <height>16</height>
@@ -196,7 +196,7 @@
      <widget class="QTableWidget" name="FriendstableWidget">
       <property name="geometry">
        <rect>
-        <x>465</x>
+        <x>461</x>
         <y>22</y>
         <width>541</width>
         <height>211</height>
@@ -285,7 +285,7 @@
      <widget class="QLabel" name="FriendsLabel">
       <property name="geometry">
        <rect>
-        <x>470</x>
+        <x>466</x>
         <y>6</y>
         <width>61</width>
         <height>16</height>
@@ -307,7 +307,7 @@
      <widget class="QTableWidget" name="SearchtableWidget">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>6</x>
         <y>270</y>
         <width>451</width>
         <height>321</height>
@@ -391,7 +391,7 @@
      <widget class="QLabel" name="SearchForLabel">
       <property name="geometry">
        <rect>
-        <x>14</x>
+        <x>10</x>
         <y>250</y>
         <width>81</width>
         <height>16</height>
@@ -413,7 +413,7 @@
      <widget class="QTableWidget" name="METARtableWidget">
       <property name="geometry">
        <rect>
-        <x>465</x>
+        <x>461</x>
         <y>270</y>
         <width>541</width>
         <height>321</height>
@@ -493,7 +493,7 @@
      <widget class="QLabel" name="MetarLabel">
       <property name="geometry">
        <rect>
-        <x>469</x>
+        <x>465</x>
         <y>251</y>
         <width>51</width>
         <height>16</height>
@@ -515,7 +515,7 @@
      <widget class="QComboBox" name="SearchcomboBox">
       <property name="geometry">
        <rect>
-        <x>95</x>
+        <x>91</x>
         <y>246</y>
         <width>80</width>
         <height>24</height>
@@ -543,7 +543,7 @@
      <widget class="QLineEdit" name="SearchEdit">
       <property name="geometry">
        <rect>
-        <x>175</x>
+        <x>171</x>
         <y>247</y>
         <width>113</width>
         <height>22</height>
@@ -556,7 +556,7 @@
      <widget class="QLineEdit" name="METAREdit">
       <property name="geometry">
        <rect>
-        <x>521</x>
+        <x>517</x>
         <y>248</y>
         <width>61</width>
         <height>22</height>
@@ -569,7 +569,7 @@
      <widget class="QPushButton" name="searchpushButton">
       <property name="geometry">
        <rect>
-        <x>290</x>
+        <x>286</x>
         <y>247</y>
         <width>91</width>
         <height>24</height>
@@ -585,7 +585,7 @@
      <widget class="QPushButton" name="METARFindButton">
       <property name="geometry">
        <rect>
-        <x>585</x>
+        <x>581</x>
         <y>247</y>
         <width>91</width>
         <height>24</height>
@@ -601,7 +601,7 @@
      <widget class="QPushButton" name="METARHelpButton">
       <property name="geometry">
        <rect>
-        <x>678</x>
+        <x>674</x>
         <y>247</y>
         <width>20</width>
         <height>24</height>
@@ -741,13 +741,13 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>110</number>
+       <number>120</number>
       </attribute>
       <attribute name="horizontalHeaderHighlightSections">
        <bool>true</bool>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>110</number>
+       <number>120</number>
       </attribute>
       <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
        <bool>false</bool>
@@ -778,12 +778,12 @@
       </column>
       <column>
        <property name="text">
-        <string>Controller</string>
+        <string>Position</string>
        </property>
       </column>
       <column>
        <property name="text">
-        <string>Position</string>
+        <string>Controller</string>
        </property>
       </column>
       <column>
@@ -793,7 +793,12 @@
       </column>
       <column>
        <property name="text">
-        <string>Award</string>
+        <string/>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Time</string>
        </property>
       </column>
      </widget>
@@ -885,22 +890,22 @@
       </column>
       <column>
        <property name="text">
+        <string>Rating</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string/>
+       </property>
+      </column>
+      <column>
+       <property name="text">
         <string>Departure</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>Destination</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Award</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Rating</string>
        </property>
       </column>
       <column>
@@ -1181,13 +1186,13 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>50</number>
+       <number>200</number>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>50</number>
+       <number>200</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
-       <bool>true</bool>
+       <bool>false</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
        <number>15</number>
@@ -1195,6 +1200,16 @@
       <attribute name="verticalHeaderMinimumSectionSize">
        <number>15</number>
       </attribute>
+      <column>
+       <property name="text">
+        <string>Flag</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Country</string>
+       </property>
+      </column>
      </widget>
      <widget class="QTableWidget" name="dbTableWidget_2">
       <property name="geometry">
@@ -1239,10 +1254,10 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>50</number>
+       <number>155</number>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>50</number>
+       <number>155</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
@@ -1253,6 +1268,21 @@
       <attribute name="verticalHeaderMinimumSectionSize">
        <number>15</number>
       </attribute>
+      <column>
+       <property name="text">
+        <string>ICAO code</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>IATA code</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>City of Airport</string>
+       </property>
+      </column>
      </widget>
     </widget>
     <widget class="QWidget" name="actual_user">
@@ -1456,7 +1486,7 @@
    <widget class="QLabel" name="logo_ivao">
     <property name="geometry">
      <rect>
-      <x>940</x>
+      <x>953</x>
       <y>0</y>
       <width>71</width>
       <height>51</height>
