--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -474,10 +474,10 @@
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <column>
        <property name="text">
@@ -1186,19 +1186,22 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>200</number>
+       <number>50</number>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>200</number>
+       <number>50</number>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>true</bool>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
-       <bool>false</bool>
+       <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <column>
        <property name="text">
@@ -1254,19 +1257,22 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>155</number>
+       <number>110</number>
+      </attribute>
+      <attribute name="horizontalHeaderHighlightSections">
+       <bool>true</bool>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>155</number>
+       <number>110</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <column>
        <property name="text">
@@ -1281,6 +1287,11 @@
       <column>
        <property name="text">
         <string>City of Airport</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Country</string>
        </property>
       </column>
      </widget>
@@ -1486,7 +1497,7 @@
    <widget class="QLabel" name="logo_ivao">
     <property name="geometry">
      <rect>
-      <x>953</x>
+      <x>945</x>
       <y>0</y>
       <width>71</width>
       <height>51</height>
