--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -53,6 +53,11 @@
       <height>631</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
@@ -77,6 +82,11 @@
         <width>451</width>
         <height>211</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
       </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
@@ -202,6 +212,11 @@
         <height>211</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
@@ -313,6 +328,11 @@
         <height>321</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
@@ -392,7 +412,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>250</y>
+        <y>248</y>
         <width>81</width>
         <height>16</height>
        </rect>
@@ -418,6 +438,11 @@
         <width>541</width>
         <height>321</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
       </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
@@ -494,7 +519,7 @@
       <property name="geometry">
        <rect>
         <x>465</x>
-        <y>251</y>
+        <y>249</y>
         <width>51</width>
         <height>16</height>
        </rect>
@@ -516,7 +541,7 @@
       <property name="geometry">
        <rect>
         <x>91</x>
-        <y>246</y>
+        <y>244</y>
         <width>80</width>
         <height>24</height>
        </rect>
@@ -544,7 +569,7 @@
       <property name="geometry">
        <rect>
         <x>171</x>
-        <y>247</y>
+        <y>245</y>
         <width>113</width>
         <height>22</height>
        </rect>
@@ -557,7 +582,7 @@
       <property name="geometry">
        <rect>
         <x>517</x>
-        <y>248</y>
+        <y>246</y>
         <width>61</width>
         <height>22</height>
        </rect>
@@ -570,7 +595,7 @@
       <property name="geometry">
        <rect>
         <x>286</x>
-        <y>247</y>
+        <y>245</y>
         <width>91</width>
         <height>24</height>
        </rect>
@@ -586,7 +611,7 @@
       <property name="geometry">
        <rect>
         <x>581</x>
-        <y>247</y>
+        <y>244</y>
         <width>91</width>
         <height>24</height>
        </rect>
@@ -602,7 +627,7 @@
       <property name="geometry">
        <rect>
         <x>674</x>
-        <y>247</y>
+        <y>244</y>
         <width>20</width>
         <height>24</height>
        </rect>
@@ -707,6 +732,11 @@
         <height>161</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
+      </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
@@ -810,6 +840,11 @@
         <width>991</width>
         <height>381</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
       </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
@@ -932,6 +967,11 @@
         <width>1001</width>
         <height>591</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+       </font>
       </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
@@ -1444,10 +1484,15 @@
     <property name="geometry">
      <rect>
       <x>7</x>
-      <y>3</y>
+      <y>6</y>
       <width>92</width>
-      <height>24</height>
+      <height>21</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
@@ -1460,10 +1505,15 @@
     <property name="geometry">
      <rect>
       <x>107</x>
-      <y>3</y>
+      <y>6</y>
       <width>92</width>
-      <height>24</height>
+      <height>21</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
