--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -223,6 +223,9 @@
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -342,6 +345,9 @@
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -367,7 +373,7 @@
        <enum>Qt::DotLine</enum>
       </property>
       <property name="sortingEnabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -450,6 +456,9 @@
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -475,7 +484,7 @@
        <enum>Qt::DotLine</enum>
       </property>
       <property name="sortingEnabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -743,6 +752,9 @@
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -765,7 +777,7 @@
        <enum>Qt::DotLine</enum>
       </property>
       <property name="sortingEnabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -852,6 +864,9 @@
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -877,7 +892,7 @@
        <enum>Qt::DotLine</enum>
       </property>
       <property name="sortingEnabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -892,7 +907,7 @@
        <number>95</number>
       </attribute>
       <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-       <bool>true</bool>
+       <bool>false</bool>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
@@ -979,6 +994,9 @@
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -1001,7 +1019,7 @@
        <enum>Qt::DotLine</enum>
       </property>
       <property name="sortingEnabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -1087,6 +1105,9 @@
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -1112,7 +1133,7 @@
        <enum>Qt::DotLine</enum>
       </property>
       <property name="sortingEnabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -1225,7 +1246,7 @@
        <enum>Qt::ElideMiddle</enum>
       </property>
       <property name="sortingEnabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -1237,7 +1258,7 @@
        <number>50</number>
       </attribute>
       <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-       <bool>true</bool>
+       <bool>false</bool>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
@@ -1296,7 +1317,7 @@
        <enum>Qt::ElideMiddle</enum>
       </property>
       <property name="sortingEnabled">
-       <bool>true</bool>
+       <bool>false</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -1357,6 +1378,9 @@
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -1377,6 +1401,9 @@
       </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
       </property>
      </widget>
      <widget class="QLabel" name="Inbound_traffic">
@@ -1407,8 +1434,14 @@
         <height>192</height>
        </rect>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
       </property>
      </widget>
      <widget class="QLabel" name="outbound_traffic">
@@ -1442,6 +1475,9 @@
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -1462,6 +1498,9 @@
       </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
       </property>
      </widget>
      <widget class="QLabel" name="nearby_controllers">
